# majutsu

./: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs  docker-compose.minio.yml
.github/workflows/: ci.yml  release.yml
crates/majutsu-cli/: Cargo.toml
crates/majutsu-cli/src/: lib.rs
crates/majutsu-core/: Cargo.toml
crates/majutsu-core/src/: lib.rs
crates/majutsu-crypto/: Cargo.toml
crates/majutsu-crypto/src/: lib.rs
crates/majutsu-daemon/: Cargo.toml
crates/majutsu-daemon/src/: lib.rs
crates/majutsu-db/: Cargo.toml
crates/majutsu-db/src/: lib.rs
crates/majutsu-large/: Cargo.toml
crates/majutsu-large/src/: lib.rs
crates/majutsu-pack/: Cargo.toml
crates/majutsu-pack/src/: lib.rs
crates/majutsu-policy/: Cargo.toml
crates/majutsu-policy/src/: lib.rs
crates/majutsu-restore/: Cargo.toml
crates/majutsu-restore/src/: lib.rs
crates/majutsu-store/: Cargo.toml
crates/majutsu-store/src/: lib.rs
crates/majutsu-watch/: Cargo.toml
crates/majutsu-watch/src/: lib.rs
docs/: BRANCHING.md  CLI_LAYOUT.md  COMMANDS.md  COMPLETION_SCORECARD.md  CONTAINER_DEMO.md  CRATES_IO_RELEASE.md  ENCRYPTED_PRODUCTION_STATE.md  FEATURES.md  GETTING_STARTED.md  HEAD_ROOT_PERFORMANCE.md  MOON_ROOT_STORAGE_OPTIMIZATION.md  OPERATIONS.md  PERFORMANCE_EFFICIENCY_COMPLETION_20260616.md  PLATFORM_SUPPORT.md  PODMAN_MINIO_E2E.md  PROVIDER_MATRIX.md  PUBLISH_COMPACTION.md  RELEASE_CHECKLIST.md  RELEASE_EVIDENCE.md  REMOTE_AND_SECURITY.md  REMOTE_BUILD.md  REMOTE_METADATA_STORAGE.md  RESTORE_TUTORIAL.md  SUBTREE_AND_RESTORE_INDEX_DESIGN.md  WINDOWS_EXTENDED_ATTRIBUTES.md
docs/releases/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.5.0.md  v0.5.1.md  v0.5.10.md  v0.5.11.md  v0.5.12.md  v0.5.2.md  v0.5.3.md  v0.5.4.md  v0.5.5.md  v0.5.6.md  v0.5.7.md  v0.5.8.md  v0.5.9.md  v0.6.0.md  v0.6.1.md  v0.6.10.md  v0.6.11.md  v0.6.12.md  v0.6.13.md  v0.6.14.md  v0.6.15.md  v0.6.2.md  v0.6.3.md  v0.6.4.md  v0.6.5.md  v0.6.6.md  v0.6.7.md  v0.6.8.md  v0.6.9.md
memo/: branch-hardening-20260609.md  github-issues-20260716.md  implementation-status-20260614.md  performance-root-benchmark-20260610.md  remaining-issues-20260609-resolution.md  remaining-issues-20260609.md  upload-queue-root-cause-20260610.md  watch-buffering-20260609.md
scripts/: check-completion.sh  check-platform-portability.py  demo-container.sh  e2e-aws-archive-restore.sh  e2e-minio.sh  measure-pack-rss.sh  package-release.sh  publish-crates-io.sh  remote-build-worker.sh  remote-build.sh  root-size-regression.sh  setup-remote-builder.sh  sync-internal-crates.sh  traffic-regression.sh  verify-encrypted-remote-recovery.sh  verify-release-artifacts.sh
scripts/remote-builder/: Dockerfile
src/: atomic_io.rs  branch_runtime.rs  cache_runtime.rs  cli.rs  clone_runtime.rs  config.rs  daemon_runtime.rs  db_refs.rs  fs_meta.rs  fsck_runtime.rs  fuse_mount.rs  history_runtime.rs  key_runtime.rs  large_runtime.rs  lib.rs  lifecycle_runtime.rs  main.rs  mount_runtime.rs  object_paths.rs  operation_log.rs  pack_runtime.rs  platform_runtime.rs  process_runtime.rs  prune_runtime.rs  queue_runtime.rs  remote_runtime.rs  remote_store.rs  restore_apply.rs  restore_runtime.rs  root_runtime.rs  root_size_summary.rs  root_state.rs  snapshot_rules.rs  snapshot_state.rs  sync_runtime.rs  util.rs  watch_runtime.rs
src/fs_meta/: windows_ea.rs
src/internal/: majutsu_cli.rs  majutsu_core.rs  majutsu_crypto.rs  majutsu_daemon.rs  majutsu_db.rs  majutsu_large.rs  majutsu_pack.rs  majutsu_restore.rs  majutsu_store.rs  majutsu_watch.rs
tests/: cli_i18n.rs  e2e_local.rs  remote_file.rs
