[package]
name = "majutsu"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/majutsu-cli",
    "crates/majutsu-core",
    "crates/majutsu-crypto",
    "crates/majutsu-daemon",
    "crates/majutsu-db",
    "crates/majutsu-large",
    "crates/majutsu-pack",
    "crates/majutsu-policy",
    "crates/majutsu-restore",
    "crates/majutsu-store",
    "crates/majutsu-watch",
]

[dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fuser = { version = "0.15", default-features = false }
filetime = "0.2"
hex = "0.4"
hmac = "0.12"
ignore = "0.4"
libc = "0.2"
majutsu-core = { path = "crates/majutsu-core" }
majutsu-cli = { path = "crates/majutsu-cli" }
majutsu-crypto = { path = "crates/majutsu-crypto" }
majutsu-daemon = { path = "crates/majutsu-daemon" }
majutsu-db = { path = "crates/majutsu-db" }
majutsu-large = { path = "crates/majutsu-large" }
majutsu-pack = { path = "crates/majutsu-pack" }
majutsu-policy = { path = "crates/majutsu-policy" }
majutsu-restore = { path = "crates/majutsu-restore" }
majutsu-store = { path = "crates/majutsu-store" }
majutsu-watch = { path = "crates/majutsu-watch" }
notify = "8"
quick-xml = "0.37"
reqwest = { version = "0.12", features = ["blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zstd = "0.13"
xattr = "1"

[[bin]]
name = "mj"
path = "src/main.rs"
