[package]
name = "majutsu"
version = "0.4.1"
edition = "2024"
description = "Host-level multi-root snapshot history agent"
license = "MIT"
repository = "https://github.com/genki/majutsu"
homepage = "https://github.com/genki/majutsu"
readme = "README.md"
keywords = ["backup", "snapshot", "history", "s3", "cli"]
categories = ["command-line-utilities", "filesystem"]

[workspace]
members = [
    ".",
    "crates/majutsu-cli",
    "crates/majutsu-core",
    "crates/majutsu-crypto",
    "crates/majutsu-daemon",
    "crates/majutsu-db",
    "crates/majutsu-large",
    "crates/majutsu-pack",
    "crates/majutsu-policy",
    "crates/majutsu-restore",
    "crates/majutsu-store",
    "crates/majutsu-watch",
]

[dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
filetime = "0.2"
hex = "0.4"
hmac = "0.12"
ignore = "0.4"
libc = "0.2"
majutsu-core = { path = "crates/majutsu-core", version = "0.4.0" }
majutsu-cli = { path = "crates/majutsu-cli", version = "0.4.0" }
majutsu-crypto = { path = "crates/majutsu-crypto", version = "0.4.0" }
majutsu-daemon = { path = "crates/majutsu-daemon", version = "0.4.0" }
majutsu-db = { path = "crates/majutsu-db", version = "0.4.0" }
majutsu-large = { path = "crates/majutsu-large", version = "0.4.0" }
majutsu-pack = { path = "crates/majutsu-pack", version = "0.4.0" }
majutsu-policy = { path = "crates/majutsu-policy", version = "0.4.0" }
majutsu-restore = { path = "crates/majutsu-restore", version = "0.4.0" }
majutsu-store = { path = "crates/majutsu-store", version = "0.4.0" }
majutsu-watch = { path = "crates/majutsu-watch", version = "0.4.0" }
notify = "8"
quick-xml = "0.37"
reqwest = { version = "0.12", features = ["blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zstd = "0.13"
xattr = "1"

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.15", default-features = false }

[[bin]]
name = "mj"
path = "src/main.rs"
