[package]
name = "majutsu-crypto"
version = "0.4.0"
edition = "2024"
description = "Encryption configuration and helpers for majutsu"
license = "MIT"
repository = "https://github.com/genki/majutsu"
homepage = "https://github.com/genki/majutsu"
publish = false

[dependencies]
age = "0.11"
anyhow = "1"
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
