[package]
name = "majutsu-db"
version = "0.4.0"
edition = "2024"
description = "Database schema and queue models for majutsu"
license = "MIT"
repository = "https://github.com/genki/majutsu"
homepage = "https://github.com/genki/majutsu"
publish = false

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
