[package]
name = "majutsu-large"
version = "0.4.0"
edition = "2024"
description = "Large object metadata and chunking models for majutsu"
license = "MIT"
repository = "https://github.com/genki/majutsu"
homepage = "https://github.com/genki/majutsu"

[dependencies]
anyhow = "1"
blake3 = "1"
chrono = "0.4"
majutsu-core = { path = "../majutsu-core", version = "0.4.0" }
serde = { version = "1", features = ["derive"] }
zstd = "0.13"

[dev-dependencies]
serde_json = "1"
