[package]
name = "majutsu-pack"
version = "0.4.0"
edition = "2024"
description = "Pack file metadata and validation for majutsu"
license = "MIT"
repository = "https://github.com/genki/majutsu"
homepage = "https://github.com/genki/majutsu"

[dependencies]
chrono = "0.4"
majutsu-core = { path = "../majutsu-core", version = "0.4.0" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
