[package]
name = "majutsu-policy"
version = "0.4.0"
edition = "2024"
description = "Lifecycle and prune policy helpers for majutsu"
license = "MIT"
repository = "https://github.com/genki/majutsu"
homepage = "https://github.com/genki/majutsu"
publish = false

[dependencies]
anyhow = "1"
chrono = "0.4"
serde_json = "1"
