[package]
name = "majutsu-restore"
version = "0.4.0"
edition = "2024"
description = "Restore planning models for majutsu"
license = "MIT"
repository = "https://github.com/genki/majutsu"
homepage = "https://github.com/genki/majutsu"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
majutsu-core = { path = "../majutsu-core", version = "0.4.0" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
